--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.4.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
     "next": "^14.1.0",
